--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -8,3 +8,10 @@ coverage==4.5.4
 Sphinx==1.8.5
 twine==1.14.0
 Click==7.0
+scipy==1.6.3
+scikit-image==0.19.2
+pandas==1.3.5
+numpy==1.22.3
+opencv-python==4.6.0.66
+Pillow==9.2.0
+openslide-python==1.2.0
